--- a/README.adoc
+++ b/README.adoc
@@ -235,7 +235,7 @@ plugins {
 }
 
 dependencies {
-    implementation("dev.vihang.firestore4k:dynamic-api:$latestVersion")
+    implementation("io.firestore4k:dynamic-api:$latestVersion")
 }
 ----
 === For _typed_ API
@@ -247,7 +247,7 @@ plugins {
 }
 
 dependencies {
-    implementation("dev.vihang.firestore4k:typed-api:$latestVersion")
+    implementation("io.firestore4k:typed-api:$latestVersion")
 }
 ----
 === For _typed_ API with _annotations_ & _KSP_
@@ -266,9 +266,9 @@ plugins {
 }
 
 dependencies {
-    implementation("dev.vihang.firestore4k:typed-api:$latestVersion")
-    compileOnly(project("dev.vihang.firestore4k:annotations:$latestVersion"))
-    ksp(project("dev.vihang.firestore4k:ksp:$latestVersion"))
+    implementation("io.firestore4k:typed-api:$latestVersion")
+    compileOnly(project("io.firestore4k:annotations:$latestVersion"))
+    ksp(project("io.firestore4k:ksp:$latestVersion"))
 }
 
 kotlin {
